<resources>
    <string name="app_name">Calculator 4</string>
    <string name="settings">Settings</string>
    <string name="went_wrong">Something went wrong :(</string>
    <string name="incorrect_symbols">I can\'t recognize symbol or function :(</string>
    <string name="wrong_brackets">Brackets were positioned incorrect</string>
    <string name="incorrect_expression">Incorrect expression</string>
    <string name="error">Error</string>
    <string name="error_history">Error saving to history</string>
    <string name="set">Is set</string>
    <string name="attention_disable_rounding">Attention! Numbers still will be rounded if they are too long</string>
    <string name="rounding">Rounding</string>
    <string name="angle">Angle</string>
    <string name="together">Together</string>
    <string name="button_side_ratio">Button side\'s ratio WIDTH:HEIGHT</string>
    <string name="theme">Theme</string>
    <string name="theme_light_yellow_new">Light Yellow NEW</string>
    <string name="theme_dark_new">Dark NEW</string>
    <string name="theme_light">Light</string>
    <string name="theme_light_yellow">Light Yellow</string>
    <string name="theme_light_light_pink">Light Light-Pink</string>
    <string name="theme_light_pink">Light Pink</string>
    <string name="theme_light_gray">Light Gray</string>
    <string name="theme_light_violet">Light Violet</string>
    <string name="theme_light_blue">Light Blue</string>
    <string name="theme_light_purple">Light Purple</string>
    <string name="theme_light_light_blue">Light Light-Blue</string>
    <string name="theme_light_green">Light Green</string>
    <string name="theme_light_orange">Light Orange</string>
    <string name="theme_light_red">Light Red</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_dark_green">Dark Green</string>
    <string name="theme_dark_purple">Dark Purple</string>
    <string name="theme_dark_yellow">Dark Yellow</string>
    <string name="theme_dark_pink">Dark Pink</string>
    <string name="theme_dark_orange">Dark Orange</string>
    <string name="theme_dark_red">Dark Red</string>
    <string name="enable_autocalculation">Calculate on the go</string>
    <string name="enable_second_edit_text">Enable second field to enter second expression</string>
    <string name="number_format">Number format</string>
    <string name="enable_button_change_dimens">Show buttons that change dimensions of main buttons</string>
    <string name="button_size">Buttons size</string>
    <string name="change_button_size">Change buttons size</string>
    <string name="info">Info</string>
    <string name="format">Format</string>
    <string name="format_normal">Normal</string>
    <string name="format_scientific">Scientific</string>
    <string name="format_engineering">Engineering</string>
    <string name="digit_separator">Digit separator</string>
    <string name="digit_separator_none">None</string>
    <string name="digit_separator_space">Space</string>
    <string name="digit_separator_low_line">Low line</string>
    <string name="digit_separator_apostrophe">Apostrophe</string>
    <string name="history">History</string>
    <string name="change_dimens_hint">
        Ползунок меняет ширину кнопки. Пропорционально ширине меняется высота.
        Отношение ширины к высоте находится слева от ползунка и его можно менять, нажав на него.
        Кнопка \"Предыдущие\" вернёт настройки до вызова окна с ползунками.
        Кнопка \"Исходные\" вернёт настройки по умолчанию.
        В портретном режиме будут 2 ползунка: верхний регулирует верхний ряд кнопок, нижний - все остальные кнопки.
        Чтобы ширина была одинаковой, поставьте галочку \"Вместе\"
    </string>
    <string name="enable_rounding">Enable rounding</string>
    <string name="precision">Precision</string>
    <string name="rounding_precision">Rounding precision</string>
    <string name="autodeleting_of_history">Autodeleting of old history\'s etries </string>
    <string name="delete_if_more_than">Delete if more than</string>
    <string name="add_to_history_only_by_Equals_button">Add to history only by Equals button</string>
    <string name="debug_functions">Debug functions</string>
    <string name="enable_conversion_toast">Enable message about converted expression before its calculation</string>
    <string name="enable_time_elapsed_toast">Enable message about elapsed time during operations with expression</string>
    <string name="enable_autocalculation_short">Calculate on the go</string>
    <string name="enable_second_edit_text_short">Second field</string>
    <string name="button_dimens">Button dimensions</string>
    <string name="clear_history">Clear history</string>
    <string name="help">Help</string>
    <string name="description_and_hints" formatted="false">
        Description and hints\n\n

        Tap on result to copy\n
        Press and hold the result to convert it to different count systems\n
        Tap on numbers in History to use them\n\n

        Кнопка \"(…)\" - нажмите, чтобы обволочь в скобки ближайшее к курсору выражение, можно нажимать дальше, чтобы
        обволчь в скобки выражение уровнем выше\n
        Зажмите, чтобы обволочь в скобки выражение от начала до курсора\n\n

        You can write functions in sequence without brackets, for example\n
        lglg10000000000 вместо lg(lg(10000000000))\n
        sin-arcsin1 = sin(-arcsin(1))\n
        cos-2π = cos(-2π)\n
        arcsin-1=-1.5707963267949\n
        sinπcosπ = (sinπ)*(cosπ)\n
		cosπ(2) = cos(π)*(2)\n
		cosπ2 = cos(π*2)\n
        sin-π/2 = (sin(-π))/2\n
		2^2(10) = 2^(2)*10\n
        2^2e = 2^(2*e)\n\n

        Result \"NaN\" – mathematical indeterminacy (for example, 0/0) OR the number doesn\'t belong to the Real number set (for example, it is complex number)\n\n

        Button \"E\" – enter exponent of the number (numberEvalue = number*10^(value))\n
        123E2 = 12300 and 123E-3 = 0.123\n\n

        Button \"!\" – factorial. !! – double factorial. It is only for nonnegative integers.\n
        Factorial (n!) is the product of all positive integers from 1 to n inclusively, but 0! = 1.\n
        For example, 5! = 1*2*3*4*5 = 120\n
        Double factorial (n!!) is the product of all positive integers from 1 to n inclusively that have same parity with n, but 0!! = 1.\n
        For example, 5!! = 1*3*5 = 15\n
        6!! = 2*4*6 = 48\n\n

        Button \"°\" – perceive a number as degrees and not as radians, even if the switcher RAD/DEG in top-right corner was swiched to RAD.\n\n

        Button \"abs\" – calculate the absolute value of the number (or, simply put, to throw out the Minus if it is here).\n\n

        Button \"ln\" – calculate the natural logarithm of a number (logarithm to base e).\n
        Button \"lg\" – calculate the common logarithm of a number (logarithm to base 10).\n
        Button \"lb\" – calculate the binary logarithm of a number (logarithm to base 2).\n
        Button \"log\" – calculate the logarithm of a number to any base: log[x][b] = logₓb\n
        Also it is calculatable using following property of logarithms:\n
        logₓb  \t\t\t\t\t\t\t\t lnb  \t\t lgb \t\t lbb\n
        --------- = logₐb =    ------ = ------ = ------\n
        logₓa  \t\t\t\t\t\t\t\t lna  \t\t  lga \t\t lba\n\n


        Кнопка \"%\".\n
        Определение: Процент – это сотая часть числа.\n
        Логика использования:\n\n

        Вычисление процента от числа: число*процент% \n
        20*50%=10\n
        (сам знак процента считается за действие *0.01)\n
        формула без использования процента:\n
        число*(процент/100)\n
        Напрмер, 20% от 5 можно вычислить:\n
        5(20/100) = 5*0.2 = 1\n\n

        Вычитание или прибавка процента к числу:\n
        число±процент%\n
        20+50%=30 \t\t\t 20-50%=10\n
        формула без использования процента:\n
        число*((100±процент)/100) = число*(1±процент/100)\n
        или число±число*процент/100\n
        Например:\n
        5-20% = 5-5*20/100 = 5-5*0.2 = 5(1-0.2) = 5*0.8 = 4\n\n

        Ещё примеры: 16/(2*2)-50% = 4-50% = 2\n
        20+50%4/2 = 20+50%*2 = 20+100% = 40\n
        20+(50+25)% = 20+75% = 35\n
        20+300%! = 20+20*(300*0.01)! = 20+20*6 = 140\n
        20+10*10% = 20+1 = 21\n
        20+(50%) = 20+(50*0.01) = 20+0.5 = 20.5
    </string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="default_">Default</string>
    <string name="previous">Previous</string>
    <string name="delete_all">Delete all</string>
    <string name="result_was_copied">Result was copied</string>
    <string name="expression_was_copied">Expression was copied</string>
    <string name="copied">Copied</string>
    <string name="alloted_was_copied">Alloted was copied</string>
    <string name="admob_banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner" translatable="false">ca-app-pub-4212093490173723/7852936228</string>
    <string name="undo">←</string>
    <string name="redo">→</string>
    <string name="ic_more">&lt;more></string>
    <string name="cubeRoot">√³</string>
    <string name="quadRoot">√⁴</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_screen">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="power">power</string>
    <string name="root">root</string>
    <string name="more">more</string>
</resources>