<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_calc_on_the_go"
        android:orderInCategory="100"
        android:title="@string/enable_autocalculation_short"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_second_field"
        android:orderInCategory="100"
        android:title="@string/enable_second_edit_text_short"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_btn_dimens"
        android:orderInCategory="100"
        android:title="@string/button_dimens"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_history"
        android:orderInCategory="100"
        android:title="@string/clear_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/theme_menu"
        android:orderInCategory="100"
        android:title="@string/theme"
        app:showAsAction="never" >

        <!--
        &lt;!&ndash;вложенное меню&ndash;&gt;
        <menu>
            <item
                android:id="@+id/menu_theme_light"
                android:orderInCategory="100"
                android:title="@string/theme_light"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_yellow"
                android:orderInCategory="100"
                android:title="@string/theme_light_yellow"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_pink"
                android:orderInCategory="100"
                android:title="@string/theme_light_pink"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_gray"
                android:orderInCategory="100"
                android:title="@string/theme_light_gray"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_violet"
                android:orderInCategory="100"
                android:title="@string/theme_light_violet"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_blue"
                android:orderInCategory="100"
                android:title="@string/theme_light_blue"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_purple"
                android:orderInCategory="100"
                android:title="@string/theme_light_purple"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_light_blue"
                android:orderInCategory="100"
                android:title="@string/theme_light_light_blue"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_green"
                android:orderInCategory="100"
                android:title="@string/theme_light_green"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_orange"
                android:orderInCategory="100"
                android:title="@string/theme_light_orange"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_light_red"
                android:orderInCategory="100"
                android:title="@string/theme_light_red"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark"
                android:orderInCategory="100"
                android:title="@string/theme_dark"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_blue"
                android:orderInCategory="100"
                android:title="@string/theme_dark_blue"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_green"
                android:orderInCategory="100"
                android:title="@string/theme_dark_green"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_purple"
                android:orderInCategory="100"
                android:title="@string/theme_dark_purple"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_yellow"
                android:orderInCategory="100"
                android:title="@string/theme_dark_yellow"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_pink"
                android:orderInCategory="100"
                android:title="@string/theme_dark_pink"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_orange"
                android:orderInCategory="100"
                android:title="@string/theme_dark_orange"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_theme_dark_red"
                android:orderInCategory="100"
                android:title="@string/theme_dark_red"
                app:showAsAction="never" />
        </menu>
-->
    </item>
</menu>
