<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/button_ratio_tv"
            android:layout_width="wrap_content"
            android:minWidth="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            tools:text="16:9" />

        <SeekBar
            android:id="@+id/button_width_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="500dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="5dp"

            tools:max="100"
            tools:progress="50" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/button_ratio_tv_2"
            android:layout_width="wrap_content"
            android:minWidth="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            tools:text="16:9" />

        <SeekBar
            android:id="@+id/button_width_seekbar_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="500dp"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="5dp"

            tools:max="100"
            tools:progress="50" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <CheckBox
            android:id="@+id/change_together"
            style="@style/card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:text="@string/together"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="14sp"

            tools:checked="true" />

        <Button
            android:id="@+id/btn_select_dialog_prev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="10sp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/btn_select_dialog_default"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/default_" />

        <Button
            android:id="@+id/btn_select_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>